# varpile

./: LICENSE  README.md  pyproject.toml
data/: .gitignore  __init__.py  subsample.ipynb
data/gvcf/: example.vcf
src/varpile/: VariantFile.py  __init__.py  allele_counts.py  cli.py  errors.py  infer_sex.py  run.py  try_vcf.ipynb  utils.py
src/varpile/actions/: __init__.py  count_action.py  finalize_action.py  merge_action.py
tests/: test_gvcf.py  test_main.py  utils.py
